# tinylates

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: tinylates.hpp
include/tinylates/: tinylates.hpp
src/: tinylates.cpp
